Adjust margin to fix gap

--- a/assets/style.css
+++ b/assets/style.css
@@ -253,7 +253,7 @@ body, html {
 /*.big_image is for module pages*/
 
 .big_image {
-  margin-top: -50px;
+  margin-top: -66px;
   margin-bottom: 2em;
   width: 100%;
 }
